Tracker Boolean.valueOf, not new Boolean